data/all_generated_tests/raw_wast_tests/call_indirect_MismanagementofBlockNesting_4217.wast
;; 6. **Test Description**:     Design a complex nested structure with alternating `loop` and `block` instructions. Inside, include `call_indirect` instructions and use the `br_if` instruction within loops to conditionally exit based on the `call_indirect` call results.    **Constraint**: Ensure that the loops and blocks maintain their expected structure and the `call_indirect` calls within are correctly type-checked without causing unintended control flow exits.    **Relation to Mismanagement of Block Nesting**: Tests control flow management in complex, nested structures involving conditional exits and function calls.

(assert_invalid
  (module
    (type $t0 (func (param i32) (result i32)))
    (type $t1 (func (param i32) (result i32)))
    (func $f0 (param i32) (result i32)
      (local.get 0)
    )
    (table funcref (elem $f0))
    (func $test (param i32) (result i32)
      (loop $loop
        (block $block
          (call_indirect (type $t0) (local.get 0) (i32.const 0))
          (br_if $loop (i32.eqz (i32.const 0)))
        )
        (br_if $loop (i32.eqz (i32.const 0)))
      )
    )
  )
  "type mismatch"
)